--- a/views/calendar_views.xml
+++ b/views/calendar_views.xml
@@ -35,7 +35,7 @@
         <field name="res_model">calendar.event</field>
         <field name="view_mode">tree,form</field>
         <field name="limit">100</field>
-        <field name="domain">[]</field>
+        <field name="domain">[('start', '&gt;=', context_today().strftime('%Y-%m-%d'))]</field>
         <field name="context">{'search_default_mymeetings': True}</field>
     </record>
     <menuitem 
