--- a/views/calendar_views.xml
+++ b/views/calendar_views.xml
@@ -2,6 +2,14 @@
 <odoo>
 
     <!--calendar.event-->
+    <record id="ajouter_invitation_responsable_actions_server" model="ir.actions.server">
+        <field name="name">Ajouter invitation responsable</field>
+        <field name="model_id" ref="calendar.model_calendar_event"/>
+        <field name="binding_model_id" ref="calendar.model_calendar_event"/>
+        <field name="binding_view_types">form,list</field>
+        <field name="state">code</field>
+        <field name="code">action = model._ajouter_invitation_responsable_action()</field>
+    </record>
     <record id="is_view_calendar_event_tree" model="ir.ui.view">
         <field name="name">is_view_calendar_event_tree</field>
         <field name="model">calendar.event</field>
