--- a/views/calendar_views.xml
+++ b/views/calendar_views.xml
@@ -10,6 +10,21 @@
         <field name="state">code</field>
         <field name="code">action = model._ajouter_invitation_responsable_action()</field>
     </record>
+
+    <record id="is_view_calendar_event_form" model="ir.ui.view">
+        <field name="name">is_view_calendar_event_form</field>
+        <field name="model">calendar.event</field>
+        <field name="inherit_id" ref="calendar.view_calendar_event_form"/>
+        <field name="arch" type="xml">
+            <field name="active" position="after">
+                <field 
+                    name="is_alerte"
+                    style="background-color:orange;font-size:11pt" 
+                    attrs="{'invisible': [('is_alerte','=', False)],'readonly':True}"
+                />
+            </field>
+        </field>
+    </record> 
     <record id="is_view_calendar_event_tree" model="ir.ui.view">
         <field name="name">is_view_calendar_event_tree</field>
         <field name="model">calendar.event</field>
