--- a/views/calendar_views.xml
+++ b/views/calendar_views.xml
@@ -20,24 +20,16 @@
         <field name="code">action = model.synchroniser_google_action()</field>
     </record>
 
-
     <record id="is_view_calendar_event_calendar" model="ir.ui.view">
         <field name="name">is_view_calendar_event_calendar</field>
         <field name="model">calendar.event</field>
         <field name="inherit_id" ref="calendar.view_calendar_event_calendar"/>
         <field name="arch" type="xml">
             <field name="partner_ids" position="after">
-                <field name="is_participants"  widget="html" nolabel="1"/>
+                <field name="is_participants"  widget="html"/>
             </field>
-
-            <field name="partner_ids" position="attributes">
-                <attribute name="invisible">1</attribute>
-            </field>
-
-
         </field>
     </record> 
-
 
     <record id="is_view_calendar_event_form" model="ir.ui.view">
         <field name="name">is_view_calendar_event_form</field>
