ne pas afficher 'Decline/accept' dans les mails de changement

--- a/views/mail_data.xml
+++ b/views/mail_data.xml
@@ -2,7 +2,7 @@
 <odoo>
     <data noupdate="1">
         <record id="calendar_template_meeting_change" model="mail.template">
-            <field name="name">Calendar: Meeting Invitation</field>
+            <field name="name">Calendar: Meeting change</field>
             <field name="model_id" ref="calendar.model_calendar_attendee"/>
             <field name="subject">Changement de ${object.event_id.name}</field>
             <field name="email_from">${('' if object.partner_id.email and object.partner_id.email == object.email else object.email) | safe}</field>
@@ -19,12 +19,12 @@
     </p>
     <div style="text-align: center; margin: 16px 0px 16px 0px;">
         % set target = 'recurrence' if recurrent else 'meeting'
-        <a href="/calendar/${target}/accept?token=${object.access_token}&amp;id=${object.event_id.id}"
+        <!--a href="/calendar/${target}/accept?token=${object.access_token}&amp;id=${object.event_id.id}"
             style="padding: 5px 10px; color: #FFFFFF; text-decoration: none; background-color: #875A7B; border: 1px solid #875A7B; border-radius: 3px">
             Accept</a>
         <a href="/calendar/${target}/decline?token=${object.access_token}&amp;id=${object.event_id.id}"
             style="padding: 5px 10px; color: #FFFFFF; text-decoration: none; background-color: #875A7B; border: 1px solid #875A7B; border-radius: 3px">
-            Decline</a>
+            Decline</a-->
         <a href="/calendar/meeting/view?token=${object.access_token}&amp;id=${object.event_id.id}"
             style="padding: 5px 10px; color: #FFFFFF; text-decoration: none; background-color: #875A7B; border: 1px solid #875A7B; border-radius: 3px">
             View</a>
