--- a/views/mail_data.xml
+++ b/views/mail_data.xml
@@ -4,7 +4,7 @@
         <record id="calendar_template_meeting_change" model="mail.template">
             <field name="name">Calendar: Meeting change</field>
             <field name="model_id" ref="calendar.model_calendar_attendee"/>
-            <field name="subject">Changement de ${object.event_id.name}</field>
+            <field name="subject">${object.common_name} refuse ${object.event_id.name}</field>
             <field name="email_from">${('' if object.partner_id.email and object.partner_id.email == object.email else object.email) | safe}</field>
             <field name="email_to">${(object.event_id.user_id.email_formatted or user.email_formatted or '') | safe}</field>
             <field name="partner_to">${object.partner_id.id if object.partner_id.email and object.partner_id.email == object.email else False}</field>
