--- a/views/mail_data.xml
+++ b/views/mail_data.xml
@@ -1,96 +1,94 @@
 <?xml version="1.0"?>
 <odoo>
-    <data noupdate="1">
+    <data noupdate="0">
         <record id="calendar_template_meeting_change" model="mail.template">
             <field name="name">Calendar: Meeting change</field>
             <field name="model_id" ref="calendar.model_calendar_attendee"/>
-            <field name="subject">${object.common_name} refuse ${object.event_id.name}</field>
-            <field name="email_from">${('' if object.partner_id.email and object.partner_id.email == object.email else object.email) | safe}</field>
-            <field name="email_to">${(object.event_id.user_id.email_formatted or user.email_formatted or '') | safe}</field>
-            <field name="partner_to">${object.partner_id.id if object.partner_id.email and object.partner_id.email == object.email else False}</field>
-            <field name="lang">${object.partner_id.lang}</field>
+            <field name="subject">{{ object.common_name }} refuse {{ object.event_id.name }}</field>
+            <field name="email_from">{{ ('' if object.partner_id.email and object.partner_id.email == object.email else object.email) }}</field>
+            <field name="email_to">{{ (object.event_id.user_id.email_formatted or user.email_formatted or '') }}</field>
+            <field name="partner_to">{{ object.partner_id.id if object.partner_id.email and object.partner_id.email == object.email else False }}</field>
+            <field name="lang">{{ object.partner_id.lang }}</field>
             <field name="body_html" type="html">
 <div>
-    % set colors = ctx.get('colors', {})
-    % set recurrent = object.recurrence_id and not ctx['ignore_recurrence']
+    {% set colors = ctx.get('colors', {}) %}
+    {% set recurrent = object.recurrence_id and not ctx['ignore_recurrence'] %}
     <p>
-        Bonjour ${object.event_id.user_id.partner_id.name},<br/><br/>
-        ${object.common_name} a refusé votre invitation à la réunion ${object.event_id.name} de ${object.event_id.user_id.company_id.name}.
+        Bonjour {{ object.event_id.user_id.partner_id.name }},<br/><br/>
+        {{ object.common_name }} a refusé votre invitation à la réunion {{ object.event_id.name }} de {{ object.event_id.user_id.company_id.name }}.
     </p>
     <div style="text-align: center; margin: 16px 0px 16px 0px;">
-        % set target = 'recurrence' if recurrent else 'meeting'
-        <!--a href="/calendar/${target}/accept?token=${object.access_token}&amp;id=${object.event_id.id}"
+        {% set target = 'recurrence' if recurrent else 'meeting' %}
+        <!--a href="/calendar/{{ target }}/accept?token={{ object.access_token }}&amp;id={{ object.event_id.id }}"
             style="padding: 5px 10px; color: #FFFFFF; text-decoration: none; background-color: #875A7B; border: 1px solid #875A7B; border-radius: 3px">
             Accept</a>
-        <a href="/calendar/${target}/decline?token=${object.access_token}&amp;id=${object.event_id.id}"
+        <a href="/calendar/{{ target }}/decline?token={{ object.access_token }}&amp;id={{ object.event_id.id }}"
             style="padding: 5px 10px; color: #FFFFFF; text-decoration: none; background-color: #875A7B; border: 1px solid #875A7B; border-radius: 3px">
             Decline</a-->
-        <a href="/calendar/meeting/view?token=${object.access_token}&amp;id=${object.event_id.id}"
+        <a href="/calendar/meeting/view?token={{ object.access_token }}&amp;id={{ object.event_id.id }}"
             style="padding: 5px 10px; color: #FFFFFF; text-decoration: none; background-color: #875A7B; border: 1px solid #875A7B; border-radius: 3px">
             View</a>
     </div>
     <table border="0" cellpadding="0" cellspacing="0"><tr>
-        % if not recurrent:
+        {% if not recurrent %}
         <td width="130px;">
             <div style="border-top-left-radius: 3px; border-top-right-radius: 3px; font-size: 12px; border-collapse: separate; text-align: center; font-weight: bold; color: #ffffff; min-height: 18px; background-color: #875A7B; border: 1px solid #875A7B;">
-                ${object.event_id.get_interval('dayname', tz=object.partner_id.tz if not object.event_id.allday else None)}
+                {{ object.event_id.get_interval('dayname', tz=object.partner_id.tz if not object.event_id.allday else None) }}
             </div>
             <div style="font-size: 48px; min-height: auto; font-weight: bold; text-align: center; color: #5F5F5F; background-color: #F8F8F8; border: 1px solid #875A7B;">
-                ${object.event_id.get_interval('day', tz=object.partner_id.tz if not object.event_id.allday else None)}
+                {{ object.event_id.get_interval('day', tz=object.partner_id.tz if not object.event_id.allday else None) }}
             </div>
             <div style='font-size: 12px; text-align: center; font-weight: bold; color: #ffffff; background-color: #875A7B;'>
-                ${object.event_id.get_interval('month', tz=object.partner_id.tz if not object.event_id.allday else None)}
+                {{ object.event_id.get_interval('month', tz=object.partner_id.tz if not object.event_id.allday else None) }}
             </div>
             <div style="border-collapse: separate; color: #5F5F5F; text-align: center; font-size: 12px; border-bottom-right-radius: 3px; font-weight: bold; border: 1px solid #875A7B; border-bottom-left-radius: 3px;">
-                ${not object.event_id.allday and object.event_id.get_interval('time', tz=object.partner_id.tz) or ''}
+                {{ (not object.event_id.allday and object.event_id.get_interval('time', tz=object.partner_id.tz)) or '' }}
             </div>
         </td>
         <td width="20px;"/>
-        % endif
+        {% endif %}
         <td style="padding-top: 5px;">
             <p><strong>Details of the event</strong></p>
             <ul>
-                % if object.event_id.location:
-                    <li>Location: ${object.event_id.location}
-                        (<a target="_blank" href="http://maps.google.com/maps?oi=map&amp;q=${object.event_id.location}">View Map</a>)
+                {% if object.event_id.location %}
+                    <li>Location: {{ object.event_id.location }}
+                        (<a target="_blank" href="http://maps.google.com/maps?oi=map&amp;q={{ object.event_id.location }}">View Map</a>)
                     </li>
-                % endif
-                % if object.event_id.description :
-                    <li>Description: ${object.event_id.description}</li>
-                % endif
-                % if recurrent:
-                    <li>When: ${object.recurrence_id.name}</li>
-                % endif
-                % if not object.event_id.allday and object.event_id.duration
-                    <li>Duration: ${('%dH%02d' % (object.event_id.duration,round(object.event_id.duration*60)%60))}</li>
-                % endif
+                {% endif %}
+                {% if object.event_id.description %}
+                    <li>Description: {{ object.event_id.description }}</li>
+                {% endif %}
+                {% if recurrent %}
+                    <li>When: {{ object.recurrence_id.name }}</li>
+                {% endif %}
+                {% if not object.event_id.allday and object.event_id.duration %}
+                    <li>Duration: {{ '%dH%02d' % (object.event_id.duration, round(object.event_id.duration*60)%60) }}</li>
+                {% endif %}
                 <li>Attendees
                 <ul>
-                % for attendee in object.event_id.attendee_ids:
+                {% for attendee in object.event_id.attendee_ids %}
                     <li>
-                        <div style="display: inline-block; border-radius: 50%; width: 10px; height: 10px; background:${colors[attendee.state] or 'white'};"> </div>
-                        % if attendee.common_name != object.common_name:
-                            <span style="margin-left:5px">${attendee.common_name}</span>
-                        % else:
+                        <div style="display: inline-block; border-radius: 50%; width: 10px; height: 10px; background:{{ colors.get(attendee.state, 'white') }};"> </div>
+                        {% if attendee.common_name != object.common_name %}
+                            <span style="margin-left:5px">{{ attendee.common_name }}</span>
+                        {% else %}
                             <span style="margin-left:5px">You</span>
-                        % endif
+                        {% endif %}
                     </li>
-                % endfor
+                {% endfor %}
                 </ul></li>
             </ul>
         </td>
     </tr></table>
     <br/>
     Thank you,
-    % if object.event_id.user_id.signature:
+    {% if object.event_id.user_id.signature %}
         <br />
-        ${object.event_id.user_id.signature | safe}
-    % endif
+        {{ object.event_id.user_id.signature }}
+    {% endif %}
 </div>
             </field>
-            <field name="lang">${object.partner_id.lang}</field>
             <field name="auto_delete" eval="True"/>
         </record>
     </data>
 </odoo>
-
